<resources>
    <string name="app_name">LangNinja</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Ustawienia</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="level">Etap</string>
    <string name="action_sign_out">Wyloguj</string>
    <string name="language_name_pl_PL">Polski</string>
    <string name="language_name_bg_BG">Bułgarski</string>
    <string name="language_name_de_DE">Niemiecki</string>
    <string name="language_name_cs_CZ">Czeski</string>
    <string name="language_name_en_GB">Angielski</string>
    <string name="language_name_es_ES">Hiszpański</string>
    <string name="language_name_et_EE">Estoński</string>
    <string name="language_name_fi_FI">Fiński</string>
    <string name="language_name_fr_FR">Francuski</string>
    <string name="language_name_ga_IE">Irlandzki</string>
    <string name="language_name_hu_HU">Węgierski</string>
    <string name="language_name_hy_AM">Armeński</string>
    <string name="language_name_in_ID">Indonezyjski</string>
    <string name="language_name_is_IS">Islandzki</string>
    <string name="language_name_it_IT">Włoski</string>
    <string name="language_name_la">Łacina</string>
    <string name="language_name_lt_LT">Litewski</string>
    <string name="language_name_lv_LV">Łotewski</string>
    <string name="language_name_nl_NL">Holenderski</string>
    <string name="language_name_nb_NO">Norweski</string>
    <string name="language_name_ro_RO">Rumuński</string>
    <string name="language_name_ru_RU">Rosyjski</string>
    <string name="language_name_hr_HR">Chorwacki</string>
    <string name="language_name_sv_SE">Szwedzki</string>
    <string name="language_name_th_TH">Tajski</string>
    <string name="language_name_tr_TR">Turecki</string>
    <string name="language_name_pt_PT">Portugalski</string>
    <string name="page_count">%1$d/%2$d</string>
    <string name="language_flag_description">Obraz flagi</string>
    <string name="quote">Zdanie</string>
    <string name="numbering">numeracja</string>
    <string name="play_button">Przycisk odsłuchu</string>
    <string name="microphone_button">przycisk mikrofonu</string>
    <string name="answer">odpowiedź</string>
    <string name="category">Kategoria</string>
    <string name="button_ok">OK</string>
    <string name="button_cancel">Anuluj</string>
    <string name="agree_to_install_google">Do rozpoznawania mowy Lang Ninja używa programu Google, czy chcesz go pobrać za darmo z Google Play?</string>
    <string name="agree_to_install_tts">Do odczytywania Lang Ninja używa programu Google TTS, czy chcesz go pobrać za darmo z Google Play?</string>
    <string name="language_name_prefix">language_name_</string>
    <string name="speech_error_audio">Błąd mikrofonu</string>
    <string name="speech_unknown_error">Nieokreślony błąd</string>
    <string name="speech_error_permission">Niewystarczające uprawnienia aplikacji</string>
    <string name="speech_error_network">Brak połączenia z internetem</string>
    <string name="speech_error_no_input">Nic nie usłyszałem</string>
    <string name="speech_error_no_match">Nic nie zrozumiałem</string>
    <string name="speech_error_busy">Urządzenie zajęte</string>
    <string name="speech_error_server">Błąd serwera</string>
    <string name="need_internet_connection">Potrzebne połączenie internetowe</string>
    <string name="language_not_supported">Język nie jest wspierany</string>
    <string name="speech_error_client">Błąd usługi Google Speech - zaktualizuj do najnowszej wersji</string>
    <string name="tabs_tongue_twisters">Łamańce językowe</string>
    <string name="tabs_send_tongue_twister">Wyślij łamańca</string>
    <string name="flag">Flaga</string>
    <string name="send_button">WYŚLIJ</string>
    <string name="text_hint">Wprowadź tekst…</string>
    <string name="pick_language">Wybierz język…</string>
    <string name="test">Testuj</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_password">Hasło</string>
    <string name="action_sign_in">Rejestracja lub logowanie</string>
    <string name="action_sign_in_short">Logowanie</string>
    <string name="error_invalid_email">Niewłaściwy adres e-mail</string>
    <string name="error_invalid_password">Hasło jest za krótkie</string>
    <string name="error_incorrect_password">Niewłaściwe hasło</string>
    <string name="error_field_required">To pole jest wymagane</string>
    <string name="login">Zaloguj</string>
    <string name="button_different_login_options">Pozostałe opcje logowania</string>
    <string name="button_refresh">Odśwież</string>
    <string name="missing_internet_connection">Brak połączenia z internetem</string>
    <string name="message_connect_to_internet_and_refresh">Nawiąż połączenie i spróbuj ponownie</string>
    <string name="message_login_error">Błąd logowania</string>
    <string name="title_activity_login">Sign in</string>
    <string name="dialog_insufficient_permissions">Niewystarczające uprawnienia</string>
    <string name="message_open_app_settings">Przejdź do ustawień i ręcznie przyznaj uprawnienia do używania mikrofonu przez aplikację Lang Ninja</string>
    <string name="menu_profile">Profil</string>
    <string name="menu_settings">Ustawienia</string>
    <string name="button_save">Zapisz</string>
    <string name="change_avatar">ZMIEŃ ZDJĘCIE</string>
    <string name="hint_user_name">Imię…</string>
    <string name="label_name_input">IMIĘ</string>
    <string name="message_unknown_upload_error">Nieznany błąd, zdjęcie nie zostało zapisane.</string>
    <string name="message_unknown_error">Nieznany błąd.</string>
    <string name="sign_out">Wyloguj</string>
    <string-array name="filter_spinner_options">
        <item>Najnowsze</item>
        <item>Moje</item>
    </string-array>
    <string-array name="sentence_list_long_click">
        <item>Edytuj</item>
        <item>Usuń</item>
    </string-array>
    <string name="spinner_all_languages">Wszystkie języki</string>

    <!-- Date Util -->
    <string name="date_util_now">teraz</string>
    <string name="date_util_unit_minute">minuta</string>
    <string name="date_util_unit_minutes_to_4">minuty</string>
    <string name="date_util_unit_minutes_from_5">minut</string>
    <string name="date_util_unit_hour">godzina</string>
    <string name="date_util_unit_hours_to_4">godziny</string>
    <string name="date_util_unit_hours_from_5">godzin</string>
    <string name="date_util_unit_day">dzień</string>
    <string name="date_util_unit_days">dni</string>
    <string name="date_util_unit_month">miesiąc</string>
    <string name="date_util_unit_months_to_4">miesiące</string>
    <string name="date_util_unit_months_from_5">miesięcy</string>
    <string name="date_util_unit_year">rok</string>
    <string name="date_util_unit_years_to_4">lata</string>
    <string name="date_util_unit_years_from_5">lat</string>
    <string name="menu_sentence_feedback">Przekaż opinię</string>
    <string name="menu_sentence_edit">Edytuj</string>
    <string name="menu_sentence_delete">Usuń</string>
    <string name="alert_title_send_sentence_feedback">Przekaż opinię dotyczącą zdania: \"%s\"</string>
    <string name="alert_title_send_comment_feedback">Przekaż opinię dotyczącą komentarza: \"%s\"</string>
    <string name="alert_title_removing">Usuwanie</string>
    <string name="alert_message_removing_sentence">Czy na pewno chcesz usunąć tego łamańca?</string>
    <string name="alert_message_removing_comment">Czy na pewno chcesz usunąć komentarz?</string>
    <string name="content_description_user_photo">Zdjęcie profilowe użytkownika</string>
    <string name="hint_enter_comment_here">Napisz komentarz..</string>
</resources>
