<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".ui.profile.UserProfileActivity">

    <ImageButton
        android:id="@+id/userProfilePhoto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_margin="@dimen/margin"
        android:background="@drawable/shape_user_photo_background"
        app:layout_constraintBottom_toTopOf="@+id/userProfilePhotoCaption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.100000024"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/userProfilePhotoCaption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_avatar"
        android:textColor="@color/colorPrimaryDark"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/margin"
        app:layout_constraintBottom_toTopOf="@+id/userProfileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePhoto" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/label_name_input"
        android:textColor="@color/colorLight"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/userProfileName"
        app:layout_constraintStart_toStartOf="@+id/userProfileName" />

    <EditText
        android:id="@+id/userProfileName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_buttons"
        android:background="@drawable/shape_textinput_background"
        android:hint="@string/hint_user_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintBottom_toTopOf="@+id/userProfileSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfilePhotoCaption" />

    <Button
        android:id="@+id/userProfileSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/button_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userProfileName" />

    <ProgressBar
        android:id="@+id/userProfileImageProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/userProfileName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/userProfileName" />

</android.support.constraint.ConstraintLayout>
