<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.editor.SentenceEditor">

    <ImageView
        android:id="@+id/sentenceEditorFlagImageView"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:layout_margin="18dp"
        android:adjustViewBounds="true"
        android:background="@drawable/shape_flag_background"
        android:contentDescription="@string/language_flag_description"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toTopOf="@+id/sentenceEditorEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.07999998"
        app:layout_constraintVertical_chainStyle="packed" />

    <EditText
        android:id="@+id/sentenceEditorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="18dp"
        android:background="@drawable/shape_textinput_background"
        android:hint="@string/text_hint"
        android:inputType="textMultiLine"
        android:minEms="10"
        app:layout_constraintBottom_toTopOf="@+id/sentenceEditorSaveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentenceEditorFlagImageView" />

    <Button
        android:id="@+id/sentenceEditorSaveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/send_button"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sentenceEditorEditText" />

    <ProgressBar
        android:id="@+id/sentenceEditorProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sentenceEditorEditText"
        app:layout_constraintEnd_toEndOf="@+id/sentenceEditorEditText"
        app:layout_constraintStart_toStartOf="@+id/sentenceEditorEditText"
        app:layout_constraintTop_toTopOf="@+id/sentenceEditorEditText" />

</android.support.constraint.ConstraintLayout>